# MISO-Final-Project

./: .gitignore  BLUE_GREEN_SERVICE_DISCOVERY_RESEARCH.md
services/: README.md  (+1 more)
services/inventory-service/: .env.example  Dockerfile  alembic.ini  buildspec.yml  entrypoint.sh  main.py  mock_data.sql  pyproject.toml
services/inventory-service/alembic/: env.py
services/inventory-service/alembic/versions/: 325a00557b65_create_inventory_table.py  8b316d617756_initial_migration.py  c13a0dcab581_create_inventory_table.py
services/inventory-service/src/: __init__.py
services/inventory-service/src/application/: __init__.py
services/inventory-service/src/application/ports/: __init__.py
services/inventory-service/src/application/use_cases/: __init__.py  check_stock.py  reserve_stock.py
services/inventory-service/src/domain/: exceptions.py
services/inventory-service/src/domain/models/: inventory.py
services/inventory-service/src/domain/repositories/: __init__.py  inventory_repository.py
services/inventory-service/src/infrastructure/api/: __init__.py  dependencies.py  exception_handlers.py
services/inventory-service/src/infrastructure/config/: settings.py
services/orders-service/: .env.example  Dockerfile  alembic.ini  buildspec.yml  entrypoint.sh  main.py  mock_data.sql  pyproject.toml
services/orders-service/alembic/: env.py
services/orders-service/alembic/versions/: 0cc536f89299_create_orders_table.py  2524b9fbfeae_remove_vendor_id_from_orders_table.py  639c8e427233_change_delivery_date_to_delivery_id.py  d1d448ba60da_create_orders_table.py
services/orders-service/src/: __init__.py
services/orders-service/src/domain/: exceptions.py
(+126 files in other folders)
